# Datafeed-Server

./: .dockerignore  .env  .gitignore  CMakeLists.txt  README.md  STRESS_TEST_README.md  docker-compose.yml  dockerfile  main.cpp  market_data.h  render.yaml  requirements.txt  sadapter.cpp  sadapter.h  start.sh  stress_test.py
adapters/dadapter/: dadapter.cpp  dadapter.h
api/: IMPLEMENTATION_PLAN.md
api/controllers/: AlertsController.cpp  AlertsController.hpp  ConfigController.cpp  ConfigController.hpp  DashboardController.cpp  DashboardController.hpp  FeedController.cpp  FeedController.hpp  MonitorController.cpp  MonitorController.hpp  SearchController.cpp  SearchController.hpp
api/dto/: ClientResponseDto.hpp  FeedStatusResponse.hpp
api/router/: router.cpp  router.hpp
api/services/: AlertsService.cpp  AlertsService.hpp  ClientService.cpp  ClientService.hpp  ConfigService.cpp  ConfigService.hpp  FeedService.cpp  FeedService.hpp  MonitorService.cpp  MonitorService.hpp  SearchService.cpp  SearchService.hpp
backtest_source/: backtest_source.cpp  backtest_source.h
broker/include/adapter/: eadapter.h
broker/include/exchange/: exchange1.h  exchange2.h  exchange3.h  exchange4.h
broker/src/adapter/: eadapter.cpp
broker/src/exchange/: exchange1.cpp  exchange2.cpp  exchange3.cpp  exchange4.cpp
dashboard/: package-lock.json  package.json  test1.txt  test2.txt  test3.txt  test7.txt
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/cards/: card.tsx
dashboard/app/cards/charts/: chart.tsx
dashboard/app/cards/config/: config.tsx
dashboard/app/cards/database/: database.tsx
dashboard/app/cards/event/: event.tsx
dashboard/app/cards/exchange/: exchange.tsx
dashboard/app/cards/health/: health.tsx
dashboard/app/cards/insight/: insight.tsx
dashboard/app/cards/latency/: latency.tsx
dashboard/app/cards/network/: network.tsx
dashboard/app/cards/pannel/: pannel.tsx
dashboard/app/cards/performance/: performance.tsx
dashboard/app/cards/pipeline/: pipeline.tsx
dashboard/app/cards/session/: session.tsx
dashboard/app/cards/throughput/: throughput.tsx
dashboard/app/component/: dashboardgrid.tsx  navbar.tsx  sidebar.tsx  sidebarConfig.ts  ticker.tsx
dashboard/app/lib/: datafeed-context.tsx
examples/: ws_client.py  ws_client_extended.py
init/: schema.sql  seed.sql
init/adapter/: sadapter.h
live_source/: live_source.cpp  live_source.h
metrics/: database_monitor.cpp  database_monitor.h  exchange_monitor.cpp  exchange_monitor.h  feed_health_monitor.cpp  feed_health_monitor.h  latency_tracker.cpp  latency_tracker.h  metric_aggregator.cpp  metric_aggregator.h  metrics_collector.cpp  metrics_collector.h  network_monitor.cpp  network_monitor.h  queue_monitor.cpp  queue_monitor.h  ring_buffer.h  session_monitor.cpp  session_monitor.h  snapshot_converter.cpp  snapshot_converter.h  snapshot_scheduler.cpp  snapshot_scheduler.h  state_manager.cpp  state_manager.h  system_monitor.cpp  system_monitor.h  throughput_tracker.cpp  throughput_tracker.h  weekly_rollup.cpp  weekly_rollup.h
reports/: datafeed_health_20260627_213324.html  datafeed_health_20260627_213324.json  datafeed_health_20260627_213324.md  datafeed_health_20260627_213324.txt  datafeed_health_20260627_213727.html  datafeed_health_20260627_213727.json  datafeed_health_20260627_213727.md  datafeed_health_20260627_213727.txt  websocket_stream_report.json  websocket_stream_report.txt
server/: server.cpp  server.h
session/: session_manager.cpp  session_manager.h
tests/: api_stress_test.py  binance_ws_test.cpp  stress_test.py  websocket_stream_test.py  ws_price_feed_stress_test.py
tests/reports/: datafeed_health_20260627_190340.html  datafeed_health_20260627_190340.json  datafeed_health_20260627_190340.md  datafeed_health_20260627_190340.txt  datafeed_health_20260627_194704.html  datafeed_health_20260627_194704.json  datafeed_health_20260627_194704.md  datafeed_health_20260627_194704.txt  datafeed_health_20260627_212658.html  datafeed_health_20260627_212658.json  datafeed_health_20260627_212658.md  datafeed_health_20260627_212658.txt  datafeed_health_20260627_224513.html  datafeed_health_20260627_224513.json  datafeed_health_20260627_224513.md  datafeed_health_20260627_224513.txt  datafeed_health_20260627_225222.html  datafeed_health_20260627_225222.json  datafeed_health_20260627_225222.md  datafeed_health_20260627_225222.txt
utils/: error.h
workers/: apex-redirect.js
